--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Kollectlt-Dashboard" />
+  <meta name="description" content="KollectIt-Admin" />
 
   <!-- MDB -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
@@ -16,7 +16,7 @@
   <!-- MDB -->
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"> -->
 
-  <title>Kollectlt</title>
+  <title>KollectIt-Admin</title>
 </head>
 
 <body>
